<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.neighbour.NeighbourActivity"
    android:id="@+id/neighbour_detail">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintDimensionRatio="16:12"
      android:scaleType="centerCrop"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toTopOf="@+id/cardView"
      tools:srcCompat="@tools:sample/avatars"
      android:contentDescription="Avatars" />

  <TextView
      android:id="@+id/textView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginBottom="16dp"
      android:text="@string/Name"
      android:textColor="@color/white"
      android:textSize="34sp"
      app:layout_constraintBottom_toBottomOf="@+id/imageView"
      app:layout_constraintStart_toStartOf="@id/imageView"
      app:layout_constraintEnd_toEndOf="@id/imageView"/>

  <androidx.cardview.widget.CardView
      android:id="@+id/cardView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="12dp"
      android:layout_marginEnd="12dp"
      android:layout_marginTop="12dp"
      app:cardElevation="5dp"
      app:cardCornerRadius="4dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView"
      app:layout_constraintBottom_toTopOf="@+id/cardView2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <TextView
          android:id="@+id/textView2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/Name"
          android:textColor="@color/black"
          android:textSize="24sp"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp"
          android:layout_marginTop="16dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintBottom_toTopOf="@id/textView3"/>

      <View
          android:id="@+id/border"
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/background_color"
          android:layout_marginBottom="10dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/textView2"
          app:layout_constraintBottom_toTopOf="@id/textView3"/>

      <TextView
          android:id="@+id/textView3"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="22dp"
          android:text="@string/Locality"
          android:textSize="15sp"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/textView2"
          app:layout_constraintBottom_toTopOf="@id/textView4"/>

      <TextView
          android:id="@+id/textView4"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="30dp"
          android:text="@string/Phone_Number"
          android:textSize="15sp"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/textView3"
          app:layout_constraintBottom_toTopOf="@id/textView5"/>

      <TextView
          android:id="@+id/textView5"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="30dp"
          android:text="@string/Social_network"
          android:textSize="15sp"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp"
          android:layout_marginBottom="16dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/textView4"
          app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
      android:id="@+id/cardView2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginEnd="12dp"
      android:layout_marginStart="12dp"
      android:layout_marginTop="16dp"
      android:layout_marginBottom="50dp"
      app:cardElevation="5dp"
      app:cardCornerRadius="4dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/cardView"
      app:layout_constraintBottom_toBottomOf="parent"
      tools:layout_editor_absoluteX="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <TextView
          android:id="@+id/textView6"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/About_me"
          android:textColor="@color/black"
          android:textSize="24sp"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp"
          android:paddingTop="16dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintBottom_toTopOf="@id/textView7"/>

      <View
          android:id="@+id/border2"
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/background_color"
          android:layout_marginBottom="10dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/textView6"
          app:layout_constraintBottom_toTopOf="@id/textView7"/>

      <TextView
          android:id="@+id/textView7"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:text="@string/Text_about"
          android:textSize="15sp"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp"
          android:paddingBottom="16dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/textView6"
          app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.cardview.widget.CardView>

  <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/floatingActionButton"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_marginEnd="12dp"
      android:clickable="true"
      android:contentDescription="Favorite"
      android:focusable="true"
      app:elevation="10dp"
      app:backgroundTint="@color/white"
      app:layout_constraintBottom_toBottomOf="@+id/imageView"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView"
      app:srcCompat="@drawable/ic_star_border_white_24dp" />

  <ImageButton
      android:id="@+id/imageButton"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_marginStart="10dp"
      android:layout_marginTop="10dp"
      android:padding="10dp"
      android:background="@color/cardview_shadow_end_color"
      android:contentDescription="Back_arrow"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/ic_baseline_arrow_back_24" />


  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>